# edugraph-classify-qwen3vl

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  MODEL.md  README.md  chat_template.jinja  pyproject.toml  setup_and_run.local.sh  setup_and_run.sh  train_dataset.jsonl
gcp/: build_and_push.sh  create_vm.sh  download_results.sh  run_on_vm.sh  server_deploy.sh  startup.sh
prompts/: classification_v2.txt
scripts/: build_training_data.py  classify_image.py  config.py  create_dataset.py  create_gguf_release.py  data_processing.py  finetune_stage1_ki.py  finetune_stage1_knowledge.py  finetune_stage2_multimodal.py  generate_dataset_ki.py  generate_dataset_multimodal.py  inference.py  package_gguf.py  package_model.py
server/: Dockerfile  example-request.sh
tests/: test_data_processing.py
