[project]
name = "edugraph"
version = "0.1.0"
description = "Fine-tuning Qwen3-VL for educational content classification"
authors = [{ name = "Christian Bick", email = "christian.bick@edugraph.io" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    # PyTorch dependencies for CUDA 12.8
    "torch~=2.8.0",
    "torchvision~=0.23.0",

    # Transformers and fine-tuning ecosystem
    "transformers~=4.57.0",
    "accelerate~=1.12.0",
    "torchcodec~=0.8.1",
    "peft~=0.18.0",
    "trl~=0.25.1",
    "bitsandbytes>=0.48.2",

    # Core ML/data libraries
    "datasets~=4.4.1",
    "evaluate~=0.4.6",
    "einops~=0.8.1",
    "scikit-learn~=1.7.2",
    "pandas~=2.3.3",
    "numpy~=2.3.5",

    # Utilities
    "python-dotenv~=1.2.1",
    "rdflib~=7.4.0",
    "huggingface-hub~=0.36.0",
    "boto3~=1.41.5",
    "requests~=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

# Define a named index for the PyTorch CUDA packages
#[[tool.uv.index]]
#name = "pytorch-cuda"
#url = "https://download.pytorch.org/whl/cu128"
#explicit = true

# Map specific packages to the named index
#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cuda" },
#]
#torchvision = [
#  { index = "pytorch-cuda" },
#]
